tests/errors/do_zero_increment.f90
program main
implicit none
integer :: i
do i = 1, 5, 0
    write(*,*) i
end do
end program main
